--- a/calculate-models/ModelCalculation.ipynb
+++ b/calculate-models/ModelCalculation.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cloudbutton geospatial use case: 3D fuel mapping for wildfire risk assessment\n"
+    "# Cloudbutton geospatial use case: Model calculation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_BUCKET = 'cb-geospatial-wildfire'\n",
+    "COMPUTE_BACKEND = 'localhost'\n",
+    "STORAGE_BACKEND = 'localhost'\n",
+    "STORAGE_PREFIX = 'localhost://'\n",
     "INPUT_DATA_PREFIX = 'input-las-tiles/'"
    ]
   },
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_INPUT_DIR = 'dataset/'"
+    "LOCAL_INPUT_DIR = 'input-las-tiles'"
    ]
   },
   {
@@ -79,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "storage = Storage()"
+    "storage = Storage(backend=STORAGE_BACKEND)"
    ]
   },
   {
@@ -111,7 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storage.list_keys(bucket=DATA_BUCKET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,181 +322,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-05-10 11:25:55,345 [INFO] lithops.config -- Lithops v2.6.0\n",
-      "2022-05-10 11:25:55,469 [INFO] lithops.storage.backends.ibm_cos.ibm_cos -- IBM COS client created - Region: us-south\n",
-      "2022-05-10 11:25:55,470 [INFO] lithops.serverless.backends.ibm_cf.ibm_cf -- IBM CF client created - Region: us-south - Namespace: aitor_dev_us_south\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fexec = lithops.FunctionExecutor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-05-10 11:25:56,340 [INFO] lithops.invokers -- ExecutorID 4ff859-0 | JobID M000 - Selected Runtime: aitorarjona/cloudbutton-wildfire-ibmcf:0.1 - 2048MB\n",
-      "2022-05-10 11:25:57,832 [INFO] lithops.invokers -- ExecutorID 4ff859-0 | JobID M000 - Starting function invocation: calculate_models() - Total: 6 activations\n",
-      "2022-05-10 11:25:57,853 [INFO] lithops.invokers -- ExecutorID 4ff859-0 | JobID M000 - View execution logs at /tmp/lithops/logs/4ff859-0-M000.log\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fs = fexec.map(calculate_models, 'cos://cb-geospatial-wildfire/input-las-tiles/')"
+    "os.path.join(STORAGE_PREFIX, DATA_BUCKET, INPUT_DATA_PREFIX)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-05-10 11:25:58,673 [INFO] lithops.wait -- ExecutorID 4ff859-0 - Getting results from 6 function activations\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fffa849f26fb46098d4a0f217a4a17d5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "    0%|          | 0/6  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-05-10 11:28:29,363 [INFO] lithops.executors -- ExecutorID 4ff859-0 - Cleaning temporary data\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "fs = fexec.map(calculate_models, os.path.join(STORAGE_PREFIX, DATA_BUCKET, INPUT_DATA_PREFIX))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "res = fexec.get_result(fs=fs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/tmp/geo/\n",
-      "/tmp/geo/PNOA_2017_CLM-CAS_242-4422_ORT-CLA-RGB.laz\n",
-      "/tmp/geo/slope\n",
-      "/tmp/geo/slope/PNOA_2017_CLM-CAS_242-4422_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/chm\n",
-      "/tmp/geo/chm/PNOA_2017_CLM-CAS_242-4422_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/aspect\n",
-      "/tmp/geo/aspect/PNOA_2017_CLM-CAS_242-4422_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/dsm\n",
-      "/tmp/geo/dsm/PNOA_2017_CLM-CAS_242-4422_ORT-CLA-RGB.gtiff\n",
-      "/tmp/geo/fcc\n",
-      "/tmp/geo/fcc/PNOA_2017_CLM-CAS_242-4422_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/dem\n",
-      "/tmp/geo/dem/PNOA_2017_CLM-CAS_242-4422_ORT-CLA-RGB.gtiff\n",
-      "---\n",
-      "/tmp/geo/\n",
-      "/tmp/geo/slope\n",
-      "/tmp/geo/slope/PNOA_2017_CLM-CAS_274-4464_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/aspect\n",
-      "/tmp/geo/aspect/PNOA_2017_CLM-CAS_274-4464_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/chm\n",
-      "/tmp/geo/chm/PNOA_2017_CLM-CAS_274-4464_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/PNOA_2017_CLM-CAS_274-4464_ORT-CLA-RGB.laz\n",
-      "/tmp/geo/dsm\n",
-      "/tmp/geo/dsm/PNOA_2017_CLM-CAS_274-4464_ORT-CLA-RGB.gtiff\n",
-      "/tmp/geo/fcc\n",
-      "/tmp/geo/fcc/PNOA_2017_CLM-CAS_274-4464_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/dem\n",
-      "/tmp/geo/dem/PNOA_2017_CLM-CAS_274-4464_ORT-CLA-RGB.gtiff\n",
-      "---\n",
-      "/tmp/geo/\n",
-      "/tmp/geo/slope\n",
-      "/tmp/geo/slope/PNOA_2017_CLM-CAS_278-4470_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/aspect\n",
-      "/tmp/geo/aspect/PNOA_2017_CLM-CAS_278-4470_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/chm\n",
-      "/tmp/geo/chm/PNOA_2017_CLM-CAS_278-4470_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/dsm\n",
-      "/tmp/geo/dsm/PNOA_2017_CLM-CAS_278-4470_ORT-CLA-RGB.gtiff\n",
-      "/tmp/geo/fcc\n",
-      "/tmp/geo/fcc/PNOA_2017_CLM-CAS_278-4470_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/PNOA_2017_CLM-CAS_278-4470_ORT-CLA-RGB.laz\n",
-      "/tmp/geo/dem\n",
-      "/tmp/geo/dem/PNOA_2017_CLM-CAS_278-4470_ORT-CLA-RGB.gtiff\n",
-      "---\n",
-      "/tmp/geo/\n",
-      "/tmp/geo/slope\n",
-      "/tmp/geo/slope/PNOA_2017_CLM-CAS_650-4434_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/aspect\n",
-      "/tmp/geo/aspect/PNOA_2017_CLM-CAS_650-4434_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/chm\n",
-      "/tmp/geo/dsm\n",
-      "/tmp/geo/dsm/PNOA_2017_CLM-CAS_650-4434_ORT-CLA-RGB.gtiff\n",
-      "/tmp/geo/fcc\n",
-      "/tmp/geo/fcc/PNOA_2017_CLM-CAS_650-4434_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/dem\n",
-      "/tmp/geo/dem/PNOA_2017_CLM-CAS_650-4434_ORT-CLA-RGB.gtiff\n",
-      "/tmp/geo/PNOA_2017_CLM-CAS_650-4434_ORT-CLA-RGB.laz\n",
-      "---\n",
-      "/tmp/geo/\n",
-      "/tmp/geo/slope\n",
-      "/tmp/geo/slope/PNOA_2017_CLM-CAS_742-4404_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/aspect\n",
-      "/tmp/geo/aspect/PNOA_2017_CLM-CAS_742-4404_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/chm\n",
-      "/tmp/geo/chm/PNOA_2017_CLM-CAS_742-4404_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/PNOA_2017_CLM-CAS_742-4404_ORT-CLA-RGB.laz\n",
-      "/tmp/geo/dsm\n",
-      "/tmp/geo/dsm/PNOA_2017_CLM-CAS_742-4404_ORT-CLA-RGB.gtiff\n",
-      "/tmp/geo/fcc\n",
-      "/tmp/geo/fcc/PNOA_2017_CLM-CAS_742-4404_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/dem\n",
-      "/tmp/geo/dem/PNOA_2017_CLM-CAS_742-4404_ORT-CLA-RGB.gtiff\n",
-      "---\n",
-      "/tmp/geo/\n",
-      "/tmp/geo/PNOA_2017_CLM-CAS_748-4414_ORT-CLA-RGB.laz\n",
-      "/tmp/geo/slope\n",
-      "/tmp/geo/slope/PNOA_2017_CLM-CAS_748-4414_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/chm\n",
-      "/tmp/geo/chm/PNOA_2017_CLM-CAS_748-4414_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/aspect\n",
-      "/tmp/geo/aspect/PNOA_2017_CLM-CAS_748-4414_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/dsm\n",
-      "/tmp/geo/dsm/PNOA_2017_CLM-CAS_748-4414_ORT-CLA-RGB.gtiff\n",
-      "/tmp/geo/fcc\n",
-      "/tmp/geo/fcc/PNOA_2017_CLM-CAS_748-4414_ORT-CLA-RGB.tiff\n",
-      "/tmp/geo/dem\n",
-      "/tmp/geo/dem/PNOA_2017_CLM-CAS_748-4414_ORT-CLA-RGB.gtiff\n",
-      "---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for r in res:\n",
     "    print(r.decode('utf-8').strip())\n",
