Update WC workflow

--- a/water-consumption/WaterConsumption.ipynb
+++ b/water-consumption/WaterConsumption.ipynb
@@ -91,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "AREA_OF_INFLUENCE = 8000"
+    "AREA_OF_INFLUENCE = 16000"
    ]
   },
   {
@@ -306,7 +306,7 @@
     "shapefile_key = 'shapefile_murcia.zip'\n",
     "try:\n",
     "    shapefile_head = storage.head_object(bucket=DATA_BUCKET, key=shapefile_key)\n",
-    "    print(f'Shapefiel already in storage: {siam_data_head}')\n",
+    "    print(f'Shapefile already in storage: {siam_data_head}')\n",
     "except StorageNoSuchKeyError:\n",
     "    print('Uploading shapefile to Object Storage...')\n",
     "    with open(shapefile_key, 'rb') as f:\n",
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download MDT files for free from http://centrodedescargas.cnig.es/CentroDescargas/buscadorCatalogo.do?codFamilia=MDT05# and put them in `MDT` folder."
+    "Download DTM files for free from http://centrodedescargas.cnig.es/CentroDescargas/buscadorCatalogo.do?codFamilia=MDT05# and put them in `input_DTMs` folder."
    ]
   },
   {
@@ -427,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs = fexec.map(asc_to_geotiff, os.path.join(STORAGE_PREFIX, DATA_BUCKET, DTM_ASC_PREFIX))"
+    "fs_cog = fexec.map(asc_to_geotiff, os.path.join(STORAGE_PREFIX, DATA_BUCKET, DTM_ASC_PREFIX))"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, _ = fexec.wait(fs=fs)"
+    "_, _ = fexec.wait(fs=fs_cog)"
    ]
   },
   {
@@ -476,7 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs = fexec.map(get_tile_meta, os.path.join(STORAGE_PREFIX, DATA_BUCKET, DTM_GEOTIFF_PREFIX))"
+    "fs_meta = fexec.map(get_tile_meta, os.path.join(STORAGE_PREFIX, DATA_BUCKET, DTM_GEOTIFF_PREFIX))"
    ]
   },
   {
@@ -485,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiles_meta = fexec.get_result(fs=fs)"
+    "tiles_meta = fexec.get_result(fs=fs_meta)"
    ]
   },
   {
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Serverless computation"
+    "## Raster Data Interpolation"
    ]
   },
   {
@@ -822,8 +822,12 @@
     "        \n",
     "        bounding_rect = box(chunk_src.bounds.left, chunk_src.bounds.top, chunk_src.bounds.right, chunk_src.bounds.bottom)\n",
     "        filtered = pd.DataFrame(filter_stations(bounding_rect, siam_data))\n",
-    "        filtered['pixel'] = filtered.apply(lambda station: rasterio.transform.rowcol(transform, station['X'], station['Y']), axis=1)\n",
     "        \n",
+    "        if filtered.shape[0] == 0:\n",
+    "            return [(tile_key, data_field, block_x, block_y, None)]\n",
+    "        \n",
+    "        filtered['pixel'] = filtered.apply(lambda station: rasterio.transform.rowcol(transform, station['X'], station['Y']), axis=1)\n",
+    "                \n",
     "        # Interpolate variables from meteo station data, generate raster with result\n",
     "        dest_chunk_file = os.path.join(tempfile.gettempdir(), tile_id + '_' + data_field + '_' + str(block_x) + '_' + str(block_y) + '.tif')\n",
     "        \n",
@@ -867,9 +871,9 @@
    },
    "outputs": [],
    "source": [
-    "fs_rad = fexec.map(radiation_interpolation, chunks, runtime_memory=2048)\n",
-    "fs_temp = fexec.map(map_interpolation, chunks, extra_args=('temp', ), runtime_memory=2048)\n",
-    "fs_humi = fexec.map(map_interpolation, chunks, extra_args=('humi', ), runtime_memory=2048)\n",
+    "# fs_rad = fexec.map(radiation_interpolation, chunks, runtime_memory=2048)\n",
+    "# fs_temp = fexec.map(map_interpolation, chunks, extra_args=('temp', ), runtime_memory=2048)\n",
+    "# fs_humi = fexec.map(map_interpolation, chunks, extra_args=('humi', ), runtime_memory=2048)\n",
     "fs_wind = fexec.map(map_interpolation, chunks, extra_args=('wind', ), runtime_memory=2048)"
    ]
   },
@@ -879,9 +883,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_rad = fexec.get_result(fs=fs_rad)\n",
-    "res_temp = fexec.get_result(fs=fs_temp)\n",
-    "res_humi = fexec.get_result(fs=fs_humi)\n",
+    "# res_rad = fexec.get_result(fs=fs_rad)\n",
+    "# res_temp = fexec.get_result(fs=fs_temp)\n",
+    "# res_humi = fexec.get_result(fs=fs_humi)\n",
     "res_wind = fexec.get_result(fs=fs_wind)"
    ]
   },
@@ -891,7 +895,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_rad"
+    "res_rad = []"
    ]
   },
   {
@@ -902,7 +906,6 @@
    "source": [
     "res_flatten = []\n",
     "for l in [res_rad, res_temp, res_humi, res_wind]:\n",
-    "    print(l)\n",
     "    for elem in l:\n",
     "        for sub_elem in elem:\n",
     "            res_flatten.append(sub_elem)"
@@ -914,7 +917,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_flatten"
+    "# res_flatten"
    ]
   },
   {
@@ -956,6 +959,10 @@
     "    from rasterio.windows import Window\n",
     "    \n",
     "    tile_key, data_field = tile_data\n",
+    "    \n",
+    "    cobjs = [tup[2] for tup in chunks]\n",
+    "    if None in cobjs:\n",
+    "        return None\n",
     "    \n",
     "    # Get width and height from original tile\n",
     "    source_tile_key = os.path.join(DTM_GEOTIFF_PREFIX, tile_key)\n",
@@ -1001,10 +1008,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs_merged = []\n",
+    "iterdata = []\n",
     "for (tile_id, data_field), chunks in grouped_chunks.items():\n",
-    "    fs = fexec.map(merge_blocks, ((tile_id, data_field), chunks), runtime_memory=2048)\n",
-    "    fs_merged.append(fs)"
+    "    iterdata.append(((tile_id, data_field), chunks))"
    ]
   },
   {
@@ -1013,9 +1019,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_keys = []\n",
-    "for fs in fs_eva:\n",
-    "    fexec.wait(fs=fs)"
+    "fs_merged = fexec.map(merge_blocks, iterdata, runtime_memory=2048)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiles_merged = fexec.get_result(fs=fs_merged)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_keys_merged = set([os.path.basename(t) for t in tiles_merged])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_keys_merged"
    ]
   },
   {
@@ -1263,17 +1294,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tiles_full_keys = storage.list_keys(bucket=DATA_BUCKET, prefix=os.path.join(DTM_GEOTIFF_PREFIX))\n",
-    "tile_keys = [os.path.basename(tile) for tile in tiles_full_keys]\n",
-    "tile_keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-04-13T16:58:55.822484Z",
@@ -1284,7 +1304,7 @@
    },
    "outputs": [],
    "source": [
-    "fs_eva = fexec.map(combine_calculations, tile_keys, runtime_memory=2048)\n",
+    "fs_eva = fexec.map(combine_calculations, tile_keys_merged, runtime_memory=2048)\n",
     "res_eva = fexec.get_result(fs=fs_eva)"
    ]
   },
@@ -1369,7 +1389,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
