--- a/ndvi-diff/NDVI-diff.ipynb
+++ b/ndvi-diff/NDVI-diff.ipynb
@@ -33,6 +33,7 @@
     "import shutil\n",
     "import os\n",
     "import gc\n",
+    "import datetime\n",
     "from rasterio.io import MemoryFile\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "from PIL import Image\n",
@@ -65,7 +66,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from_date, to_date = notebook_utils.pick_date_range()"
+    "default_from = datetime.date(year=2019, month=9, day=17)\n",
+    "default_to = datetime.date(year=2020, month=9, day=16)\n",
+    "\n",
+    "from_date, to_date = notebook_utils.pick_date_range(default_from, default_to)"
    ]
   },
   {
@@ -97,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_region = notebook_utils.MapRegion()"
+    "map_region = notebook_utils.MapRegion(center=(39.60595289727246, -122.82804126978336))"
    ]
   },
   {
@@ -234,16 +238,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "tags": []
    },
    "outputs": [],
    "source": [
     " fexec = lithops.FunctionExecutor(\n",
     "        backend='aws_lambda',\n",
     "        storage='aws_s3',\n",
-    "        log_level='DEBUG',\n",
+    "        log_level='INFO',\n",
     "        runtime_memory=1024,\n",
-    "        runtime='lithops-awslambda-ndvi-v38:01'  # Runtime for AWS Lambda\n",
+    "        runtime='aitorarjona/cloudbutton-ndvi:01'  # Runtime for AWS Lambda\n",
     ")\n",
     "\n",
     "iterdata = [(scenes_f1[0], scenes_f2[0], wd) for wd in windows]\n",
@@ -281,6 +285,7 @@
     "        row = ij_window[0][0]\n",
     "        col = ij_window[0][1]\n",
     "        jpg_stream = fexec.storage.get_cloudobject(co_jpg, stream=True)\n",
+    "        print(jpg_stream)\n",
     "\n",
     "        if row not in jpgs:\n",
     "            jpgs[row] = [None]*11\n",
@@ -288,7 +293,7 @@
     "        jpgs[row][col] = Image.open(jpg_stream)\n",
     "\n",
     "    with ThreadPoolExecutor(max_workers=len(data)) as ex:\n",
-    "        fs = ex.map(get_window, data)\n",
+    "        fs = list(ex.map(get_window, data))\n",
     "\n",
     "    new_im = Image.new('RGB', (scene_band.width, scene_band.height))\n",
     "\n",
@@ -297,6 +302,7 @@
     "\n",
     "    for row in sorted(jpgs.keys()):\n",
     "        for im in jpgs[row]:\n",
+    "            print(im, x_offset, y_offset)\n",
     "            new_im.paste(im, (x_offset, y_offset))\n",
     "            x_offset += im.size[0]\n",
     "        x_offset = 0\n",
@@ -305,9 +311,9 @@
     "    thumbnail_zise = (640, 640)\n",
     "    new_im.thumbnail(thumbnail_zise)\n",
     "\n",
-    "    #fig = plt.figure(figsize=(10, 10))\n",
-    "    #plt.title(out_file)\n",
-    "    #plt.imshow(new_im)\n",
+    "    # fig = plt.figure(figsize=(10, 10))\n",
+    "    # plt.title(out_file)\n",
+    "    # plt.imshow(new_im)\n",
     "    images[out_file] = new_im"
    ]
   },
@@ -323,7 +329,7 @@
     "\n",
     "images = {}\n",
     "with ThreadPoolExecutor(max_workers=3) as ex:\n",
-    "    fs = ex.map(get_jpg, [co_jpgs_f1, co_jpgs_f2, co_jpgs_diff])\n",
+    "    fs = list(ex.map(get_jpg, [co_jpgs_f1, co_jpgs_f2, co_jpgs_diff]))\n",
     "\n",
     "f, ax = plt.subplots(1,3, figsize=(18, 18))\n",
     "i = 0\n",
@@ -339,7 +345,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fexec.plots()"
+   ]
   }
  ],
  "metadata": {
