Added throughput number

--- a/ndvi-diff/NDVI-diff.ipynb
+++ b/ndvi-diff/NDVI-diff.ipynb
@@ -27,7 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import datetime as dt\n",
@@ -52,108 +57,168 @@
     "from cloudbutton_geospatial.io_utils.plot import tiff_overview, plot_map\n",
     "\n",
     "%matplotlib inline"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Input parameters"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Select the date interval in which tiles will be processed:"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04905729d05a43c6bd9a14e592fa0e58",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DatePicker(value=datetime.date(2019, 9, 17), description='From day')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b11dc9dc13ab46cb84802ffbb49dd698",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DatePicker(value=datetime.date(2021, 9, 16), description='To day')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from_date, to_date = notebook_utils.pick_date_range()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Select the tile's cloud percentage threshold:"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "percentage = notebook_utils.pick_percentage_slider()"
-   ],
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a46c2c369ee48d4ac37d3616ffc4527",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0, continuous_update=False, description='Percentage of cloudiness')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "percentage = notebook_utils.pick_percentage_slider()"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Select the area which delimites the tiles you want to process (left click to mark a point in the map, right click to erase current selection):"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Select the area which delimites the tiles you want to process (left click to mark a point in the map, right click to erase current selection):"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05302d4be6c14faeb0f7c52b6813aeb8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[39.60595289727246, -122.82804126978336], controls=(ZoomControl(options=['position', 'zoom_in_text'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "map_region = notebook_utils.MapRegion()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[39.55800070006127, -122.61826429016692] 2019-09-17 2021-09-16 ['B04', 'B08'] 0\n"
+     ]
+    }
+   ],
    "source": [
     "coord = map_region.get_region()[0] #[-122.72001061072717, 39.25990481501755] \n",
     "lat = coord[1]  # latitude\n",
@@ -165,58 +230,67 @@
     "cc = percentage.value  # Minimum cloud cover on each image, 25 is 25%\n",
     "\n",
     "print([lat, lon], start_date, end_date, what, cc)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-122.61826429016692, 39.55800070006127],\n",
+       " [-122.61826429016692, 39.55800070006127]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " map_region.get_region()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Get Sentinel-2 packages"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "## Get Sentinel-2 packages"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "storage = lithops.storage.Storage()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found scenes 2019-09-17: [('sentinel-cogs/sentinel-s2-l2a-cogs/10/S/EJ/2019/9/S2A_10SEJ_20190917_0_L2A/B04.tif', 'sentinel-cogs/sentinel-s2-l2a-cogs/10/S/EJ/2019/9/S2A_10SEJ_20190917_0_L2A/B08.tif')]\n",
+      "Found scenes 2021-09-16: [('sentinel-cogs/sentinel-s2-l2a-cogs/10/S/EJ/2021/9/S2A_10SEJ_20210916_0_L2A/B04.tif', 'sentinel-cogs/sentinel-s2-l2a-cogs/10/S/EJ/2021/9/S2A_10SEJ_20210916_0_L2A/B08.tif')]\n"
+     ]
+    }
+   ],
    "source": [
     "# Get scenes from intital date\n",
     "scenes_f1 = s2froms3.get_scene_list(lon=lon, lat=lat,\n",
@@ -237,51 +311,50 @@
     "scene = scenes_f1[-1]\n",
     "scene_band = rasterio.open('s3://'+scene[0])\n",
     "windows = list(scene_band.block_windows())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "obj = storage.get_object('sentinel-cogs', scene[0].replace('sentinel-cogs/', ''))\n",
     "obj2 = storage.get_object('sentinel-cogs', scene[1].replace('sentinel-cogs/', ''))\n",
     "get_sz = len(obj) + len(obj2)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "462804282 bytes\n",
+      "441.36455726623535 megabytes\n",
+      "0.44136455726623536 gigabytes\n"
+     ]
+    }
+   ],
    "source": [
     "print(str(get_sz) + \" bytes\")\n",
     "mb = get_sz / 2**20\n",
     "print(str(mb) + \" megabytes\")\n",
     "gb = mb / 1000\n",
     "print(str(gb) + \" gigabytes\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def calculate_ndvi(scene, ij_window, storage):\n",
@@ -365,25 +438,18 @@
     "\n",
     "    co_jpg_diff=\"\"\n",
     "    return ij_window, co_jpg_f1, co_jpg_f2, co_jpg_diff, stats_f1, stats_f2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Using the selected parameters, get the identifiers of the selected tiles from Sentinel-2:"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Using the selected parameters, get the identifiers of the selected tiles from Sentinel-2:"
+   ]
   },
   {
    "cell_type": "code",
@@ -402,8 +468,20 @@
     "\n",
     "iterdata = [(scenes_f1[0], scenes_f2[0], wd) for wd in windows]\n",
     "fexec.map(compute_ndvi_diff, iterdata)\n",
-    "results = fexec.get_result()\n",
-    "\n",
+    "results = fexec.get_result()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "# Plots\n",
     "fexec.plot(dst='C:\\\\Users\\\\alega\\\\Desktop\\\\lithops' + str([lat, lon]))"
    ],
@@ -438,8 +516,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "read_results = [stat['get'] for stat in list_throughput]\n",
-    "write_results = [stat['put'] for stat in list_throughput]"
+    "write_results"
    ],
    "metadata": {
     "collapsed": false,
@@ -453,7 +530,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "write_results"
+    "read_results = [stat['get'] for stat in list_throughput]\n",
+    "write_results = [stat['put'] for stat in list_throughput]"
    ],
    "metadata": {
     "collapsed": false,
@@ -586,10 +664,29 @@
    "outputs": [],
    "source": [
     "# THROUGHPUT READ\n",
+    "size_total_read = 0\n",
     "for value in read_results:\n",
     "    size_per_worker = get_sz / numberWorkers\n",
+    "    size_total_read = size_total_read + size_per_worker\n",
     "    value['size'] = size_per_worker\n",
     "    value['bandwidth'] = size_per_worker / (value.get('t1') - value.get('t0')) / 1e6"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Size total write\n",
+    "size_total_write = 0\n",
+    "for value in write_results:\n",
+    "    size_total_write = size_total_write + value.get('size')"
    ],
    "metadata": {
     "collapsed": false,
@@ -631,7 +728,25 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "keys = storage.list_keys(bucket='daniel-lithops-geospatial')"
+    "# Throughput read numeric:\n",
+    "throughput_interpolation = size_total_read / duration  # Bytes/second\n",
+    "print(f\"Throughput: {throughput_interpolation / 1024**2} MiB/s\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Throughput write numeric:\n",
+    "throughput_interpolation = size_total_write / duration  # Bytes/second\n",
+    "print(f\"Throughput: {throughput_interpolation / 1024**2} MiB/s\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -1647,6 +1762,44 @@
    ],
    "source": [
     "create_agg_bdwth_plot(read_results, write_results, fexec.executor_id + '-storage-kpi.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Throughput: 45.86134039229429 MiB/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Throughput read numeric:\n",
+    "throughput_interpolation = size_total_read / duration  # Bytes/second\n",
+    "print(f\"Throughput: {throughput_interpolation / 1024**2} MiB/s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Throughput: 2.111045103190282 MiB/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Throughput write numeric:\n",
+    "throughput_interpolation = size_total_write / duration  # Bytes/second\n",
+    "print(f\"Throughput: {throughput_interpolation / 1024**2} MiB/s\")"
    ]
   },
   {
