Added two deleted cells

--- a/ndvi-diff/NDVI-diff.ipynb
+++ b/ndvi-diff/NDVI-diff.ipynb
@@ -334,6 +334,110 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "### Parallel execution in the cloud"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def calculate_ndvi(scene, ij_window, storage):\n",
+    "\n",
+    "    ij, window = ij_window\n",
+    "    band_4_s3_loc, band_8_s3_loc = scene\n",
+    "    band_path = band_4_s3_loc.split('/')\n",
+    "    ndvi_local = f'/tmp/{band_path[7]}_{ij}_NDVI.tif'\n",
+    "    jpg_local = f'/tmp/{band_path[7]}_{ij}_NDVI.jpg'\n",
+    "\n",
+    "    # generate nir and red objects as arrays in float64 format\n",
+    "    # Read from S3 to lambda\n",
+    "\n",
+    "    get_t0 = time.time()\n",
+    "    band4 = rasterio.open('s3://'+band_4_s3_loc)  # red\n",
+    "    band8 = rasterio.open('s3://'+band_8_s3_loc)  # nir\n",
+    "\n",
+    "\n",
+    "    profile = band4.profile\n",
+    "    profile.update(dtype='float64')\n",
+    "    profile.update(width=window.width)\n",
+    "    profile.update(height=window.height)\n",
+    "\n",
+    "    with rasterio.open(ndvi_local, 'w', **profile) as dst:\n",
+    "        red = band4.read(1, window=window).astype('float64')\n",
+    "        nir = band8.read(1, window=window).astype('float64')\n",
+    "        get_t1 = time.time()\n",
+    "        ndvi = (np.where((nir + red) == 0., 0, (nir - red) / (nir + red))).astype('float64')\n",
+    "        ndvi_mean = np.mean(ndvi, axis=0)\n",
+    "        dst.write(ndvi, 1)\n",
+    "        ndvi[0][0] = -1\n",
+    "        ndvi[0][1] = 1\n",
+    "        plt.imsave(jpg_local, ndvi, cmap=\"RdYlGn\")\n",
+    "\n",
+    "    # THROUGHPUT WRITE\n",
+    "    with open(jpg_local, 'rb') as jpg_temp:\n",
+    "        put_t0 = time.time()\n",
+    "        co_jpg = storage.put_cloudobject(jpg_temp.read(), key=jpg_local.replace('/tmp/', ''))\n",
+    "        put_t1 = time.time()\n",
+    "\n",
+    "        obj_metadata = storage.head_object(BUCKET_NAME, jpg_local.replace('/tmp/', ''))\n",
+    "        put_sz = float(obj_metadata.get('content-length'))\n",
+    "\n",
+    "    write_bandwidth_mb = put_sz / (put_t1 - put_t0) / 1e6\n",
+    "\n",
+    "    stats = {\n",
+    "        'put': {'t0': put_t0, 't1': put_t1, 'bandwidth': write_bandwidth_mb, 'size': put_sz},\n",
+    "        'get': {'t0': get_t0, 't1': get_t1, 'bandwidth': 0, 'size': 0},\n",
+    "    }\n",
+    "\n",
+    "    return ndvi_local, ndvi_mean, co_jpg, stats\n",
+    "\n",
+    "\n",
+    "def compute_ndvi_diff(old_scene, new_scene, ij_window, storage):\n",
+    "\n",
+    "    ij, window = ij_window\n",
+    "    band_path = new_scene[0].split('/')\n",
+    "    jpg_diff_local = f'/tmp/{band_path[7]}_{ij}_NDVI_DIFF.jpg'\n",
+    "\n",
+    "    ndvi_local_f1, ndvi_mean_f1, co_jpg_f1, stats_f1 = calculate_ndvi(old_scene, ij_window, storage)\n",
+    "    ndvi_local_f2, ndvi_mean_f2, co_jpg_f2, stats_f2 = calculate_ndvi(new_scene, ij_window, storage)\n",
+    "\n",
+    "    ndvi_old = rasterio.open(ndvi_local_f1)\n",
+    "    ndvi_new = rasterio.open(ndvi_local_f2)\n",
+    "\n",
+    "    profile = ndvi_old.profile\n",
+    "    profile.update(dtype='float64')\n",
+    "    profile.update(width=window.width)\n",
+    "    profile.update(height=window.height)\n",
+    "\n",
+    "    no = ndvi_old.read(1).astype('float64')\n",
+    "    nn = ndvi_new.read(1).astype('float64')\n",
+    "    ndvi_cmp = ((nn - no) * (nn + no)).astype('float64')\n",
+    "    ndvi_cmp[0][0] = -1\n",
+    "    ndvi_cmp[0][1] = 1\n",
+    "    plt.imsave(jpg_diff_local, ndvi_cmp, cmap=\"RdYlGn\")\n",
+    "\n",
+    "    with open(jpg_diff_local, 'rb') as jpg_diff_file:\n",
+    "        co_jpg_diff = storage.put_cloudobject(jpg_diff_file, key=jpg_diff_local.replace('/tmp/', ''))\n",
+    "\n",
+    "    return ij_window, co_jpg_f1, co_jpg_f2, co_jpg_diff, stats_f1, stats_f2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -376,14 +480,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Get data statistics"
    ]
@@ -391,7 +503,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Generate plots\n",
@@ -401,7 +517,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Function to generate throughput statistics\n",
@@ -457,7 +577,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Prepare data"
    ]
@@ -465,7 +589,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Prepare read data size \n",
@@ -479,7 +607,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Prepare throughput data\n",
@@ -545,7 +677,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Generate throughput graphic \n",
@@ -554,7 +690,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Results"
    ]
@@ -562,7 +702,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Print results:\n",
@@ -677,7 +821,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Delete temporal files"
    ]
@@ -685,7 +833,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "keys = storage.list_keys(bucket=BUCKET_NAME)"
@@ -694,7 +846,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "for key in keys:\n",
